# local_agent

./: .env  Dockerfile.mcp  PROJECT_TREE.md  README.md  agents.md  docker-compose.yml  justfile  pyproject.toml
data/: mcp_demo.sqlite
docs/: db_flowchart.mmd  db_tables_er.mmd  mcp_workflow-no-planner.json  mcp_workflow-with-planner.json  system_message.md  tools.md
mcp_app/: __init__.py
mcp_app/server/: __init__.py  db.py  main.py  observability.py
mcp_app/server/routes/: __init__.py  health.py
mcp_app/server/services/: availability.py
mcp_app/server/tools/: customers.py  health.py  products.py
setup/: create_db.py  schema.sql  seed_db.py
setup/observability/: loki.yml  otel-collector.yml  promtail.yml  tempo.yml
