[project]
name = "n8n-tut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.1.2",
    "fastmcp>=2.14.3",
    "loguru>=0.7.3",
    "opentelemetry-api>=1.35.0",
    "opentelemetry-sdk>=1.35.0",
    "opentelemetry-exporter-otlp>=1.35.0",
    "pydantic>=2.12.5",
    "typer>=0.21.1",
]
